an attempt to give access to servlet API functionality from websocket api